添加启动页,线程池工具类,初始化线程,双击退出功能,添加自定义Toast

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.software.var.apemonkey"
+        applicationId "com.software.var.ape"
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
@@ -15,6 +15,12 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+
+    /*配置源代码支持lambda表达式*/
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
